fixed contrast issues

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -28,7 +28,7 @@ li {
 }
 
 h2{
-    color:white !important;
+   
     font-size: 20px !important;
 }
 
